# small-rust

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
example_bins/: stripped-only  stripped-z  stripped-z-lto  stripped-z-lto-codegen1  stripped-z-lto-codegen1-abort  stripped-z-lto-codegen1-abort-noZlocation  stripped-z-lto-codegen1-abort-noZlocation-buildSTD  stripped-z-lto-codegen1-abort-noZlocation-buildSTD-panicimmediateAbort  stripped-z-lto-codegen1-abort-noZlocation-buildSTD-panicimmediateAbort-upxCompressedBestLZMA
