[package]
name = "small-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # enable link time optimization
codegen-units = 1 # reduce parallel codegen units
panic = "abort" # don't unwind and provide stack traces
